--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
+# OS generated files #
+######################
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Apple Pages #
+###############
 *.pages
+
+# node_modules #
+###############
+node_modules/
