--- a/api/package.json
+++ b/api/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "scripts": {
     "start": "func start",
-    "run": "swa start ../public --api-location ."
+    "swa": "swa start ../public --api-location ."
   },
   "dependencies": {
     "@sendgrid/mail": "^7.6.2"
-  },
-  "devDependencies": {}
+  }
 }
