--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "swa": "swa start ../public --api-location ."
   },
   "dependencies": {
+    "@azure/functions": "^4.6.0",
     "@sendgrid/mail": "^8.1.4"
   }
 }
