--- a/api/.funcignore
+++ b/api/.funcignore
@@ -1,7 +1,8 @@
-*.js.map
-*.ts
 .git*
 .vscode
+__azurite_db*__.json
+__blobstorage__
+__queuestorage__
 local.settings.json
 test
-tsconfig.json
+.venv
