email function V4 format

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,13 +2,6 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Attach to Node Functions",
-      "type": "node",
-      "request": "attach",
-      "port": 9229,
-      "preLaunchTask": "func: host start"
-    },
-    {
       "name": "Attach to Python Functions",
       "type": "debugpy",
       "request": "attach",
@@ -16,6 +9,14 @@
         "host": "localhost",
         "port": 9091
       },
+      "preLaunchTask": "func: host start"
+    },
+    {
+      "name": "Attach to Node Functions",
+      "type": "node",
+      "request": "attach",
+      "restart": true,
+      "port": 9229,
       "preLaunchTask": "func: host start"
     }
   ]
