--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,17 +19,6 @@
       }
     },
     {
-      "type": "func",
-      "label": "func: host start",
-      "command": "host start",
-      "problemMatcher": "$func-python-watch",
-      "isBackground": true,
-      "dependsOn": "pip install (functions)",
-      "options": {
-        "cwd": "${workspaceFolder}/api"
-      }
-    },
-    {
       "label": "pip install (functions)",
       "type": "shell",
       "osx": {
@@ -42,6 +31,17 @@
         "command": "${config:azureFunctions.pythonVenv}/bin/python -m pip install -r requirements.txt"
       },
       "problemMatcher": [],
+      "options": {
+        "cwd": "${workspaceFolder}/api"
+      }
+    },
+    {
+      "type": "func",
+      "label": "func: host start",
+      "command": "host start",
+      "problemMatcher": "$func-node-watch",
+      "isBackground": true,
+      "dependsOn": "npm install (functions)",
       "options": {
         "cwd": "${workspaceFolder}/api"
       }
