--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.1"
+    "astro": "^5.3.0"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/cli": "^4.0.0-beta.6",
-    "@tailwindcss/vite": "^4.0.0-beta.2",
-    "tailwindcss": "^4.0.0-beta.8"
+    "@tailwindcss/cli": "^4.0.8",
+    "@tailwindcss/vite": "^4.0.8",
+    "tailwindcss": "^4.0.8"
   }
 }
