--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.53.1",
     "@tailwindcss/cli": "^4.0.8",
     "@tailwindcss/vite": "^4.0.8",
     "tailwindcss": "^4.0.8"
