--- a/.github/workflows/daily-monitor.yml
+++ b/.github/workflows/daily-monitor.yml
@@ -9,18 +9,28 @@ on:
 jobs:
   check-website:
     runs-on: ubuntu-latest
-
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
-
+      
       - name: Install dependencies
         run: npm install playwright
-
+      
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
-
+      
       - name: Run Playwright tests
         run: npx playwright test
+      
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 7
