--- a/.github/workflows/daily-monitor.yml
+++ b/.github/workflows/daily-monitor.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install playwright
       
       - name: Install Playwright browsers
-        run: npx playwright install --with-deps
+        run: npx playwright install chromium
       
       - name: Run Playwright tests
         run: npx playwright test
@@ -31,6 +31,6 @@ jobs:
         uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
-          name: playwright-report
-          path: playwright-report/
+          name: test-results
+          path: test-results/
           retention-days: 7
