--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@azure/communication-email": "^1.0.0",
     "@azure/functions": "^4.0.0",
     "@sendgrid/mail": "^8.1.4"
   },
