Azure Email Migration

--- a/api/package.json
+++ b/api/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "api",
+  "name": "",
   "version": "1.0.0",
   "description": "",
+  "main": "src/functions/*.js",
   "scripts": {
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/communication-email": "^1.0.0",
-    "@azure/functions": "^4.0.0",
-    "@sendgrid/mail": "^8.1.4"
+    "@azure/functions": "^4.0.0"
   },
-  "main": "src/{index.js,functions/*.js}"
+  "devDependencies": {
+    "@azure/communication-email": "^1.0.0",
+    "azure-functions-core-tools": "^4.x"
+  }
 }
