--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
+    "@azure/static-web-apps-cli": "^2.0.6",
     "@playwright/test": "^1.53.1",
     "@tailwindcss/cli": "^4.1.10",
     "@tailwindcss/vite": "^4.1.10",
