--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,24 @@
-# OS generated files #
-######################
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+# build output
+dist/
+# generated types
+.astro/
 
-# Apple Pages #
-###############
-*.pages
-
-# node_modules #
-###############
+# dependencies
 node_modules/
 
-# Astro Files
-###############
-.astro/
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+
+# environment variables
+.env
+.env.production
+
+# macOS-specific files
+.DS_Store
+
+# jetbrains setting folder
+.idea/
