--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.12.9",
     "tailwindcss": "^4.1.11"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.54.2"
   }
 }
