--- a/.github/workflows/weekly-monitor.yml
+++ b/.github/workflows/weekly-monitor.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: lts/*
       
       - name: Install dependencies
-        run: npm install playwright
+        run: npm install playwright @playwright/test
       
       - name: Install Playwright browsers
         run: npx playwright install chromium
