--- a/.github/workflows/weekly-monitor.yml
+++ b/.github/workflows/weekly-monitor.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: lts/*
       
-      - name: Install dependencies
+      - name: Install Playwright dependencies
         run: npm install playwright @playwright/test
       
       - name: Install Playwright browsers
